reports/backtest/v3/metrics_basket_2024-07-01_2026-07-01.md
# Backtest Metrics

- fill: `next_open`
- commission: `0.00025`; min commission: `5.0`
- stamp tax sell only: `0.0005`; transfer SH only: `1e-05`
- slippage bps: `5.0`

| Metric | Value |
| --- | ---: |
| total_return | -0.003988 |
| cagr | -0.001998 |
| expectancy | -132.946456 |
| trimmed_expectancy_5pct | -132.946456 |
| median_trade_pnl | -121.476362 |
| win_rate | 0.333333 |
| payoff_ratio | 0.453277 |
| profit_factor | 0.226639 |
| max_drawdown | -0.009793 |
| sharpe | -0.214531 |
| trade_count | 3.000000 |
| avg_holding_days | 6.333333 |
| exposure | 0.004278 |
| expectancy_ci95_low | -394.245555 |
| expectancy_ci95_high | 116.882550 |
| sample_sufficient | 0.000000 |
| is_trade_count | 0.000000 |
| oos_trade_count | 3.000000 |
| is_expectancy | 0.000000 |
| oos_expectancy | -132.946456 |
| avg_exposure | 0.004278 |
| max_symbol_pct | 0.201308 |
| max_sector_pct | 0.201308 |
| max_exposure | 0.201308 |
| discipline_entries | 3.000000 |
| avg_entry_rr | 2.412284 |
| avg_entry_risk_pct | 0.003316 |
| max_entry_risk_pct | 0.005348 |
| pyramid_adds | 2.000000 |
| breakeven_win_rate | 0.688100 |

## 纪律合规

- 单股上限：默认 20%，实测最大 20.13%。
- 单行业上限：默认 40%，实测最大 20.13%。
- 总仓位上限：trend_up/range/down = 80%/50%/30%，实测最大 20.13%。
- 四不做：拒绝 4 次；入场档位 `standard`；最小 R:R 2.00。
- 盈亏比：实际入场最小 R:R 2.04，平均 R:R 2.41，对应盈亏平衡胜率 29.31%。
- 实测风险：平均 0.33%，最大 0.53%，目标 1.00%。
- 金字塔：加仓 2 次。
- 熔断/仓位：仓位被 cap/整手约束拒绝 0 次，涨跌停阻断 0 次。
- 样本判定：交易笔数 3，不足 100 笔 EV 结论门槛。

| Regime | Average Exposure |
| --- | ---: |
| down | 0.000000 |
| range | 0.002011 |
| trend_up | 0.010078 |